refactor: fix @ManyToOne to fetch lazy